
classDiagram

class Role {
  +id : Integer
  +nom : String
}

class User {
  +id : Integer
  +name : String
  +email : String
  +password : String
  +roleId : Integer
}

class Agriculteur {
  +id : Integer
  +nom : String
  +telephone : String
  +region : String
  +userId : Integer
}

class Parcelle {
  +id : Integer
  +nom : String
  +superficie : Float
  +region : String
  +agriculteurId : Integer
}

class Produit {
  +id : Integer
  +nom : String
  +categorie : String
  +unite : String
}

class Recolte {
  +id : Integer
  +quantite : Float
  +dateRecolte : Date
  +parcelleId : Integer
  +produitId : Integer
}

class Marche {
  +id : Integer
  +nom : String
  +ville : String
  +region : String
}

class PrixMarche {
  +id : Integer
  +prix : Float
  +datePrix : Date
  +produitId : Integer
  +marcheId : Integer
}

class OffreVente {
  +id : Integer
  +quantite : Float
  +prixSouhaite : Float
  +statut : String
  +recolteId : Integer
}

Role "1" --> "*" User
User "1" --> "1" Agriculteur
Agriculteur "1" --> "*" Parcelle
Parcelle "1" --> "*" Recolte
Produit "1" --> "*" Recolte
Produit "1" --> "*" PrixMarche
Marche "1" --> "*" PrixMarche
Recolte "1" --> "*" OffreVente
